--- a/src/components/NavigationBar/Navigation.css
+++ b/src/components/NavigationBar/Navigation.css
@@ -38,7 +38,7 @@
 }
 
 .TreeBasket{
-  margin: -20px 0 0 -40px;
+  margin: -12px 0 0 -25px;
   z-index: 1;
   position: absolute;
 } 
@@ -49,14 +49,14 @@
 
 
  .bounce[bounce='1']{
-	-webkit-animation: bounce 1.1s both;
-	        animation: bounce 1.1s both;
+	-webkit-animation: bounce 2.5s both;
+	        animation: bounce 2.5s both;
 }
 
-.swing {
-	-webkit-animation: swing 0.45s cubic-bezier(0.600, -0.280, 0.735, 0.045) 2.3s both;
-	        animation: swing 0.45s cubic-bezier(0.600, -0.280, 0.735, 0.045) 2.3s both;
+.bounce{
+        opacity: 0;
 }
+
 
 
 
@@ -68,133 +68,127 @@
             animation-timing-function: ease-in;
     opacity: 0;
   }
-  38% {
+  17% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
             animation-timing-function: ease-out;
     opacity: 1;
   }
-  55% {
+  24% {
     -webkit-transform: translateY(-65px);
             transform: translateY(-65px);
     -webkit-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
   }
-  72% {
+  32% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
             animation-timing-function: ease-out;
   }
-  81% {
+  36% {
     -webkit-transform: translateY(-28px);
             transform: translateY(-28px);
     -webkit-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
   }
-  90% {
+  40% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
             animation-timing-function: ease-out;
   }
-  95% {
+  42% {
     -webkit-transform: translateY(-8px);
             transform: translateY(-8px);
     -webkit-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
   }
-  100% {
+  44% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
     -webkit-animation-timing-function: ease-out;
             animation-timing-function: ease-out;
   }
+  64% {
+        -webkit-transform: rotateX(0);
+                transform: rotateX(0);
+        -webkit-transform-origin: bottom;
+                transform-origin: bottom;
+        opacity: 1;
+      }
+  100% {
+        -webkit-transform: rotateX(100deg);
+                transform: rotateX(100deg);
+        -webkit-transform-origin: bottom;
+                transform-origin: bottom;
+        opacity: 0;
+      }
 }
 @keyframes bounce {
-  0% {
-    -webkit-transform: translateY(-500px);
-            transform: translateY(-500px);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-    opacity: 0;
-  }
-  38% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  55% {
-    -webkit-transform: translateY(-65px);
-            transform: translateY(-65px);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  72% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  81% {
-    -webkit-transform: translateY(-28px);
-            transform: translateY(-28px);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  90% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  95% {
-    -webkit-transform: translateY(-8px);
-            transform: translateY(-8px);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-}
-
- @-webkit-keyframes swing {
-  0% {
-    -webkit-transform: rotateX(0);
-            transform: rotateX(0);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: rotateX(100deg);
-            transform: rotateX(100deg);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-    opacity: 0;
-  }
-}
-@keyframes swing {
-  0% {
-    -webkit-transform: rotateX(0);
-            transform: rotateX(0);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: rotateX(100deg);
-            transform: rotateX(100deg);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-    opacity: 0;
-  }
-}
-
+        0% {
+                -webkit-transform: translateY(-500px);
+                        transform: translateY(-500px);
+                -webkit-animation-timing-function: ease-in;
+                        animation-timing-function: ease-in;
+                opacity: 0;
+              }
+              17% {
+                -webkit-transform: translateY(0);
+                        transform: translateY(0);
+                -webkit-animation-timing-function: ease-out;
+                        animation-timing-function: ease-out;
+                opacity: 1;
+              }
+              24% {
+                -webkit-transform: translateY(-65px);
+                        transform: translateY(-65px);
+                -webkit-animation-timing-function: ease-in;
+                        animation-timing-function: ease-in;
+              }
+              32% {
+                -webkit-transform: translateY(0);
+                        transform: translateY(0);
+                -webkit-animation-timing-function: ease-out;
+                        animation-timing-function: ease-out;
+              }
+              36% {
+                -webkit-transform: translateY(-28px);
+                        transform: translateY(-28px);
+                -webkit-animation-timing-function: ease-in;
+                        animation-timing-function: ease-in;
+              }
+              40% {
+                -webkit-transform: translateY(0);
+                        transform: translateY(0);
+                -webkit-animation-timing-function: ease-out;
+                        animation-timing-function: ease-out;
+              }
+              42% {
+                -webkit-transform: translateY(-8px);
+                        transform: translateY(-8px);
+                -webkit-animation-timing-function: ease-in;
+                        animation-timing-function: ease-in;
+              }
+              44% {
+                -webkit-transform: translateY(0);
+                        transform: translateY(0);
+                -webkit-animation-timing-function: ease-out;
+                        animation-timing-function: ease-out;
+              }
+              64% {
+                    -webkit-transform: rotateX(0);
+                            transform: rotateX(0);
+                    -webkit-transform-origin: bottom;
+                            transform-origin: bottom;
+                    opacity: 1;
+                  }
+              100% {
+                    -webkit-transform: rotateX(100deg);
+                            transform: rotateX(100deg);
+                    -webkit-transform-origin: bottom;
+                            transform-origin: bottom;
+                    opacity: 0;
+                  }
+            }
